--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -96,6 +96,8 @@ items:
 
   - name: Architectures
     items:
+    - name: Overview
+      href: ./architectures/architectures.md
     - name: Data management landing zone
       href: ./architectures/data-management-landing-zone.md
     - name: Data landing zone
