--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -5,12 +5,12 @@ items:
 
   - name: Overview
     href: ./overview-data-governance.md
-  - name: Build an initial strategy
+  - name: Strategy
     href: ./strategy.md
-  - name: Define your plan
+  - name: Plan
     href: ./plan.md
 
-  - name: Prepare your environment
+  - name: Plan
     items:
     - name: Overview
       href: ./ready.md
@@ -45,14 +45,8 @@ items:
         href: ./eslz-management-and-monitoring.md
       - name: Business continuity and disaster recovery
         href: ./eslz-business-continuity-and-disaster-recovery.md
-      - name: Platform automation and DevOps
-        items:
-        - name: Overview
-          href: ./eslz-platform-automation-and-devops.md
-        - name: Provision the platform
-          href: ./eslz-provision-platform.md
 
-  - name: Govern your data estate
+  - name: Govern
     items:
     - name: Overview
       href: ./govern.md
@@ -67,7 +61,7 @@ items:
     - name: Data sharing agreements
       href: ./govern-data-sharing-agreements.md
 
-  - name: Secure your data estate
+  - name: Secure
     items:
     - name: Overview
       href: ./secure.md
@@ -80,7 +74,7 @@ items:
     - name: Data privacy
       href: ./secure-data-privacy.md
 
-  - name: Organize people and teams
+  - name: Organize
     items:
       - name: Overview
         href: ./organize.md
@@ -90,6 +84,13 @@ items:
         href: ./organize-persona-and-teams.md
       - name: Teams functions
         href: ./organize-team-functions.md
+
+  - name: Manage
+    items:
+    - name: Overview
+      href: ./eslz-platform-automation-and-devops.md
+    - name: Provision the platform
+      href: ./eslz-provision-platform.md
 
   - name: Well-architected considerations
     href: ./well-architected-framework.md
