--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -433,7 +433,7 @@ items:
           - name: Terraform landing zones
             href: ready/landing-zone/terraform-landing-zone.md
 
-        - name: ISV landing zones
+        - name: ISV considerations for landing zones
           href: ready/landing-zone/isv-landing-zone.md
         - name: Partner landing zones
           href: ready/landing-zone/partner-landing-zone.md
