Revert "update naming to Cloud scale anlaytics"
This reverts commit 1b130561910932604978e4eefb49a4ca1d398839.

--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -1,7 +1,7 @@
 items:
-  - name: Cloud scale analytics
+  - name: Data management and analytics scenario
     href: ./index.md
-    pdf_name: Cloud scale analytics
+    pdf_name: Data management and analytics scenario
 
   - name: Overview
     href: ./overview-data-governance.md
