--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -43,14 +43,16 @@ items:
     items:
     - name: Overview
       href: ./govern.md
-    - name: Requirements for governing data in a modern enterprise
+    - name: Requirements for governing data
       href: ./govern-requirements.md
     - name: Components needed for data governance
       href: ./govern-components.md
     - name: Technology needed for end-to-end governance
       href: ./govern-technology.md
-    - name: Manage master data
+    - name: Master data management
       href: ./govern-master-data.md
+    - name: Data Quality
+      href: ./govern-data-quality.md
     - name: Data sharing agreements
       href: ./govern-data-sharing-agreements.md
 
@@ -62,10 +64,10 @@ items:
       href: ./secure-authentication.md
     - name: Authorization
       href: ./secure-analytics-role-based-access-control.md
-    - name: Automating security
-      href: ./security-provisioning.md
     - name: Data privacy
       href: ./secure-data-privacy.md
+    - name: Automating security
+      href: ./security-provisioning.md
 
   - name: Organize people and teams
     items:
@@ -141,9 +143,7 @@ items:
         href: ./architectures/data-marketplace.md
       - name: Models
         href: ./architectures/models-cdm.md
-      - name: Data Quality
-        href: ./architectures/data-quality.md
-      - name: Master Data Management
+      - name: Data mesh master data management
         href: ./architectures/master-data-management.md        
 
       - name: Data sharing
