--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -66,7 +66,7 @@ items:
       href: ./secure-analytics-role-based-access-control.md
     - name: Data privacy
       href: ./secure-data-privacy.md
-    - name: Data access Management
+    - name: Data access management
       href: ./security-provisioning.md
 
   - name: Organize people and teams
@@ -75,8 +75,8 @@ items:
         href: ./organize.md
       - name: Organize for effective data operations
         href: ./organize-data-operations.md
-      - name: Personas and teams
-        href: ./organize-persona-and-teams.md
+      - name: Roles and teams
+        href: ./organize-roles-and-teams.md
       - name: Teams functions
         href: ./organize-team-functions.md
 
