update broken links

--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -59,6 +59,8 @@ items:
       href: ./govern-data-quality.md
     - name: Data sharing agreements
       href: ./govern-data-sharing-agreements.md
+    - name: Metadata
+      href: ./govern-metadata-standards.md
 
   - name: Secure your analytics estate
     items:
