--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -101,7 +101,7 @@ items:
   - name: Architectures
     items:
     - name: Overview
-      href: ./architectures/architectures.md
+      href: ./architectures/overview-architectures.md
     - name: Data management landing zone
       href: ./architectures/data-management-landing-zone.md
     - name: Data landing zone
@@ -114,7 +114,8 @@ items:
           href: ./architectures/data-landing-zone-data-products.md
         - name: Data Application Templates
           href: ./architectures/data-landing-zone-data-integration.md
-
+    - name: Scaling the architecture
+      href: ./architectures/scaling-architectures.md
     - name: Reference architectures (archive)
       items:
       - name: Overview
