--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -135,22 +135,22 @@ items:
       items:
       - name: Overview
         href: ./architectures/what-is-data-mesh.md
-      - name: Data Domains
+      - name: What are data domains?
         href: ./architectures/data-domains.md
-      - name: Data Products
+      - name: Data products
         href: ./architectures/what-is-data-product.md
       - name: Self-serve data platforms
         href: ./architectures/self-serve-data-platforms.md
-      - name: Data Onboarding
+      - name: Data onboarding
         href: ./architectures/data-onboarding.md
       - name: Registration of data products
         href: ./architectures/registration-of-data-products.md        
       - name: Data mesh governance
         href: ./architectures/data-mesh-governance.md
-      - name: Data Marketplace
+      - name: Data marketplace
         href: ./architectures/data-mesh-data-marketplace.md
-      - name: Data mesh master data management
-        href: ./architectures/master-data-management.md        
+      - name: Master Data Management in Data Mesh
+        href: ./architectures/data-mesh-master-data-management.md        
 
       - name: Data sharing
         items:
