--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -57,6 +57,8 @@ items:
       href: ./govern-master-data.md
     - name: Data quality
       href: ./govern-data-quality.md
+    - name: Data Lifecycle
+      href: ./govern-lifecycle.md
     - name: Data sharing agreements
       href: ./govern-data-sharing-agreements.md
     - name: Metadata
