--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -45,10 +45,8 @@ items:
       href: ./govern.md
     - name: Requirements for governing data
       href: ./govern-requirements.md
-    - name: Components needed for data governance
+    - name: Data governance processes
       href: ./govern-components.md
-    - name: Technology needed for end-to-end governance
-      href: ./govern-technology.md
     - name: Data Catalog
       href: ./govern-data-catalog.md
     - name: Data Lineage
