--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -116,18 +116,6 @@ items:
           href: ./architectures/data-reference-patterns.md
     - name: Scaling the architecture
       href: ./architectures/scaling-architectures.md
-    - name: Reference architectures (archive)
-      items:
-      - name: Overview
-        href: ./architectures/reference-architecture-overview.md
-      - name: Single data landing zone
-        href: ./architectures/reference-architecture-adatum.md
-      - name: Multiple data landing zones
-        href: ./architectures/reference-architecture-relecloud.md
-      - name: Highly sensitive data landing zones
-        href: ./architectures/reference-architecture-lamna.md
-      - name: Financial institution scenario for data mesh
-        href: ./architectures/reference-architecture-data-mesh.md
     - name: Common Data Models
       href: ./architectures/models-cdm.md
     - name: Data mesh specific guidance
@@ -159,6 +147,19 @@ items:
           href: ./architectures/alignment-with-application-integration.md
         - name: Data virtualization
           href: ./architectures/data-virtualization.md
+
+    - name: Reference architectures
+      items:
+      - name: Overview
+        href: ./architectures/reference-architecture-overview.md
+      - name: Single data landing zone
+        href: ./architectures/reference-architecture-adatum.md
+      - name: Multiple data landing zones
+        href: ./architectures/reference-architecture-relecloud.md
+      - name: Highly sensitive data landing zones
+        href: ./architectures/reference-architecture-lamna.md
+      - name: Financial institution scenario for data mesh
+        href: ./architectures/reference-architecture-data-mesh.md
 
     - name: Deployment templates
       href: ./architectures/deployment-templates.md
