--- a/docs/scenarios/data-management/toc.yml
+++ b/docs/scenarios/data-management/toc.yml
@@ -116,6 +116,8 @@ items:
           href: ./architectures/data-reference-patterns.md
     - name: Scaling the architecture
       href: ./architectures/scaling-architectures.md
+    - name: Data standardization
+      href: ./architectures/data-standardization.md
     - name: Common Data Models
       href: ./architectures/models-cdm.md
     - name: Data mesh specific guidance
@@ -176,8 +178,6 @@ items:
         items:
         - name: Data lake overview
           href: ./best-practices/data-lake-overview.md
-        - name: Data lake standardization
-          href: ./architectures/data-standardization.md
         - name: Data lake zones
           href: ./best-practices/data-lake-zones.md
         - name: Data lake key considerations
