Add skeleton of "modernize - envision" content
Based on https://microsoft.sharepoint.com/:v:/t/CloudAdoptionGuideAzureArchitectureCenter/Eaa5cmfByElAsOI1JDZ1TF4BdplGF449B-ASmZANvKCp2g?e=qwaVOW

--- a/docs/toc.yml
+++ b/docs/toc.yml
@@ -480,6 +480,10 @@ items:
 
   - name: Adopt
     items:
+    - name: Establishing adoption horizons (DRAFT)
+      href: adopt/index.md
+    - name: Approaches (DRAFT)
+      href: adopt/migrate-modernize-approaches.md
     - name: Migrate
       items:
       - name: Overview
@@ -897,6 +901,13 @@ items:
 
       - name: Skills relevant to migrate
         href: migrate/suggested-skills.md
+    
+    - name: Modernize
+      items:
+      - name: Overview (PLACEHOLDER)
+        href: modernize/index.md
+      - name: Envision cloud modernization (DRAFT)
+        href: modernize/envision-cloud-modernization.md 
 
     - name: Innovate
       items:
