--- a/docs/index.yml
+++ b/docs/index.yml
@@ -11,7 +11,7 @@ metadata:
   services: cloud-adoption-framework
   author: JanetCThomas
   ms.author: janet
-  ms.date: 01/13/2022
+  ms.date: 03/03/2022
   ms.topic: hub-page
   ms.service: cloud-adoption-framework
   ms.subservice: overview
@@ -25,9 +25,9 @@ highlightedContent:
   items:
 
     # Card
-    - title: Security in the Cloud Adoption Framework
+    - title: Scenarios
       itemType: overview
-      url: ./secure/index.md
+      url: ./scenarios/index.md
 
     # Card
     - title: Tools and templates
@@ -35,7 +35,7 @@ highlightedContent:
       url: ./resources/tools-templates.md
 
     # Card
-    - title: Newly published articles
+    - title: What's new
       itemType: whats-new
       url: ./get-started/whats-new.md
 
@@ -68,7 +68,7 @@ productDirectory:
 
     # Card
     - title: Strategy
-      imageSrc: ./_images/caf-strategy.png
+      imageSrc: ./_images/icons/strategy.png
       links:
         - url: ./strategy/motivations.md
           text: Motivations
@@ -81,7 +81,7 @@ productDirectory:
 
     # Card
     - title: Plan
-      imageSrc: ./_images/caf-plan.png
+      imageSrc: ./_images/icons/plan.png
       links:
         - url: ./digital-estate/rationalize.md
           text: Rationalize your digital estate
@@ -94,20 +94,20 @@ productDirectory:
 
     # Card
     - title: Ready
-      imageSrc: ./_images/caf-ready.png
+      imageSrc: ./_images/icons/ready.png
       links:
         - url: ./operating-model/index.md
           text: Operating model alignment
         - url: ./ready/landing-zone/index.md
           text: Azure landing zone conceptual architecture
-        - url: ./ready/landing-zone/landing-zone-journey.md
-          text: Journey to the target architecture
         - url: ./ready/landing-zone/design-areas.md
           text: Azure landing zone design areas
+        - url: ./ready/landing-zone/implementation-options.md
+          text: Implementation options
 
     # Card
     - title: Migrate
-      imageSrc: ./_images/caf-migrate.png
+      imageSrc: ./_images/icons/migrate.png
       links:
         - url: ./migrate/azure-migration-guide/index.md
           text: Azure migration guide
@@ -120,7 +120,7 @@ productDirectory:
 
     # Card
     - title: Innovate
-      imageSrc: ./_images/caf-adopt.png
+      imageSrc: ./_images/icons/innovate.png
       links:
         - url: ./innovate/business-value.md
           text: Business value consensus
@@ -132,21 +132,21 @@ productDirectory:
           text: Expand digital inventions
 
     # Card
-    - title: Govern
-      imageSrc: ./_images/caf-govern.png
+    - title: Secure
+      imageSrc: ./_images/icons/secure.png
       links:
-        - url: ./govern/methodology.md
-          text: Methodology
-        - url: ./govern/benchmark.md
-          text: Benchmark assessment
-        - url: ./govern/initial-foundation.md
-          text: Governance foundation
-        - url: ./govern/foundation-improvements.md
-          text: Improve the foundation
+        - url: ./secure/index.md
+          text: Overview
+        - url: ./secure/risk-insights.md
+          text: Risk insights
+        - url: ./secure/business-resilience.md
+          text: Business resilience
+        - url: ./secure/asset-protection.md
+          text: Asset protection
 
     # Card
     - title: Manage
-      imageSrc: ./_images/caf-manage.png
+      imageSrc: ./_images/icons/manage.png
       links:
         - url: ./manage/considerations/business-alignment.md
           text: Business commitments
@@ -158,15 +158,19 @@ productDirectory:
           text: Advance operations and design principles
 
     # Card
-    - title: Organize
-      imageSrc: ./_images/caf-organize.png
+    - title: Govern
+      imageSrc: ./_images/icons/govern.png
       links:
-        - url: ./organize/index.md
-          text: Organizational alignment
-        - url: ./organize/organization-structures.md
-          text: Team structures
-        - url: ./organize/raci-alignment.md
-          text: Align responsibilities
+        - url: ./govern/methodology.md
+          text: Methodology
+        - url: ./govern/benchmark.md
+          text: Benchmark assessment
+        - url: ./govern/initial-foundation.md
+          text: Governance foundation
+        - url: ./govern/foundation-improvements.md
+          text: Improve the foundation
+
+
 
 # tools section (optional)
 
